--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
-    "recommendations": [
-        "editorconfig.editorconfig"
-    ]
+  "recommendations": [
+    "editorconfig.editorconfig",
+    "vue.volar"
+  ]
 }
