--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "fix:prettier": "prettier -w ."
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.19",
     "nuxt": "^3.11.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.11.4",
+    "nuxt-icon": "^0.6.10",
     "prettier": "^3.2.5",
     "typescript": "^5.4.3",
     "vue-tsc": "^1"
