--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "ksi.isa.ru",
   "private": true,
   "type": "module",
   "scripts": {
@@ -16,11 +16,13 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.19",
+    "@nuxt/content": "^2.12.1",
     "nuxt": "^3.11.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@nuxtjs/sitemap": "^5.1.2",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "nuxt-icon": "^0.6.10",
     "prettier": "^3.2.5",
