--- a/.github/workflows/containerize.yml
+++ b/.github/workflows/containerize.yml
@@ -7,6 +7,12 @@ on:
 jobs:
   login:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -22,7 +28,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ github.repository }}
+          images: ghcr.io/${{ github.repository }}
 
       - name: Build and push Docker image
         id: push
