--- a/.github/workflows/containerize.yml
+++ b/.github/workflows/containerize.yml
@@ -11,6 +11,8 @@ jobs:
     permissions:
       contents: read
       packages: write
+      id-token: write
+      contents: read
       attestations: write
 
     steps:
