--- a/.github/workflows/containerize.yml
+++ b/.github/workflows/containerize.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Build and push Docker image
         id: push
-        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+        uses: docker/build-push-action@v4
         with:
           context: .
           push: true
