--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -50,6 +50,8 @@ jobs:
         run: pnpm install
       - name: Static HTML export with Nuxt
         run: pnpm run generate
+        env:
+          NODE_ENV: production
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
