--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -27,11 +27,11 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v3
         with:
-          version: 9
+          version: "8.15.5"
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: "20.11.1"
           cache: pnpm
       - name: Setup Pages
         uses: actions/configure-pages@v5
