--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "@nuxt/image": "^1.4.0",
     "nuxt": "^3.11.1",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
-  },
-  "devDependencies": {
+    "vue-router": "^4.3.0",
+    "typescript": "^5.4.3",
+    "vue-tsc": "^1",
     "@nuxtjs/sitemap": "^5.1.2",
     "@nuxtjs/tailwindcss": "^6.11.4",
-    "nuxt-icon": "^0.6.10",
-    "prettier": "^3.2.5",
-    "typescript": "^5.4.3",
-    "vue-tsc": "^1"
+    "nuxt-icon": "^0.6.10"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5"
   }
 }
