--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -33,10 +33,10 @@ jobs:
         with:
           node-version: "20.11.1"
           cache: pnpm
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-        with:
-          static_site_generator: nuxt
+      # - name: Setup Pages
+      #   uses: actions/configure-pages@v5
+      #   with:
+      #     static_site_generator: nuxt
       - name: Restore cache
         uses: actions/cache@v4
         with:
