--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -33,10 +33,6 @@ jobs:
         with:
           node-version: "20.11.1"
           cache: pnpm
-      # - name: Setup Pages
-      #   uses: actions/configure-pages@v5
-      #   with:
-      #     static_site_generator: nuxt
       - name: Restore cache
         uses: actions/cache@v4
         with:
@@ -49,13 +45,11 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       - name: Static HTML export with Nuxt
-        run: pnpm run generate
-        env:
-          NODE_ENV: production
+        run: pnpm nuxt build --preset github_pages
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./dist
+          path: ./.output/public
 
   deploy:
     runs-on: ubuntu-latest
