chore: trying to correctly set base url with env

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -58,9 +58,10 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-      NUXT_APP_BASE_URL: ${{ steps.deployment.outputs.page_url }}
 
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        env:
+          NUXT_APP_BASE_URL: ${{ vars.url }}
