--- a/.github/workflows/containerize.yml
+++ b/.github/workflows/containerize.yml
@@ -30,6 +30,8 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ghcr.io/${{ github.repository }}
+          flavor: |
+            latest=true
 
       - name: Build and push Docker image
         id: push
