--- a/.github/workflows/paper.yml
+++ b/.github/workflows/paper.yml
@@ -12,6 +12,7 @@ jobs:
         run: |
           mkdir -p ~/.ssh/
           chmod 700 ~/.ssh
+          eval $(ssh-agent -s)
           echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
           ssh-keyscan -H -p ${{ secrets.paper_port }} ${{ secrets.paper_host }} > ~/.ssh/known_hosts
           chmod 644 ~/.ssh/known_hosts
