--- a/.github/workflows/paper.yml
+++ b/.github/workflows/paper.yml
@@ -9,13 +9,9 @@ jobs:
 
     steps:
       - name: Create ssh key
-        run: |
-          mkdir -p ~/.ssh/
-          chmod 700 ~/.ssh
-          eval $(ssh-agent -s)
-          echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
-          ssh-keyscan -H -p ${{ secrets.paper_port }} ${{ secrets.paper_host }} > ~/.ssh/known_hosts
-          chmod 644 ~/.ssh/known_hosts
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Create context
         run: docker context create paper --docker "host=ssh://${{ secrets.paper_user }}@${{ secrets.paper_host }}:${{ secrets.paper_port }}"
