--- a/.github/workflows/paper.yml
+++ b/.github/workflows/paper.yml
@@ -13,6 +13,11 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
+      - name: Populate known_hosts
+        run: |
+          ssh-keyscan -p ${{ secrets.paper_port }} ${{ secrets.paper_host }} >> ~/.ssh/known_hosts
+          chmod 644 ~/.ssh/known_hosts
+
       - name: Test ssh connection
         run: ssh -T ssh://${{ secrets.paper_user }}@${{ secrets.paper_host }}:${{ secrets.paper_port }}
 
