--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "@headlessui/vue": "^1.7.19",
     "@nuxt/content": "^2.12.1",
     "@nuxt/image": "^1.4.0",
-    "nuxt": "^3.11.1",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "typescript": "^5.4.3",
-    "vue-tsc": "^1",
+    "@nuxtjs/robots": "^3.0.0",
     "@nuxtjs/sitemap": "^5.1.2",
     "@nuxtjs/tailwindcss": "^6.11.4",
-    "nuxt-icon": "^0.6.10"
+    "nuxt": "^3.11.1",
+    "nuxt-icon": "^0.6.10",
+    "typescript": "^5.4.3",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0",
+    "vue-tsc": "^1"
   },
   "devDependencies": {
     "prettier": "^3.2.5"
