--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxtjs/tailwindcss": "^6.11.4",
     "nuxt": "^3.11.1",
     "nuxt-icon": "^0.6.10",
+    "nuxt-seo-experiments": "4.0.0-rc.9",
     "typescript": "^5.4.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
