fix: fixed base url issue
fixed issue, where when changing to custom domain, base url, needed for github pages to work, was interfering on new domain

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -46,8 +46,8 @@ jobs:
         run: pnpm install
       - name: Static HTML export with Nuxt
         run: pnpm nuxt build --preset github_pages
-        env:
-          NUXT_APP_BASE_URL: "/${{ github.event.repository.name }}/"
+        # env:
+        #   NUXT_APP_BASE_URL: "/${{ github.event.repository.name }}/"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
