--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -24,15 +24,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: "8.15.5"
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "20.11.1"
-          cache: pnpm
+          node-version: "22.11.0"
+          cache: npm
       - name: Restore cache
         uses: actions/cache@v4
         with:
@@ -43,9 +39,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nuxt-build-
       - name: Install dependencies
-        run: pnpm install
+        run: npm install
       - name: Static HTML export with Nuxt
-        run: pnpm nuxt build --preset github_pages
+        run: npm nuxt build --preset github_pages
         env:
           NUXT_APP_BASE_URL: "/${{ github.event.repository.name }}/"
       - name: Upload artifact
