--- a/.github/workflows/containerize.yml
+++ b/.github/workflows/containerize.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          lfs: true
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
